<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#CCCBCB">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF"
        app:navigationIcon="@drawable/volver"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivel_de_satisfacci_n"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoCalificacion"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"/>

    <RatingBar
        android:id="@+id/calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rating="1"
        android:progressBackgroundTint="#97A7FF"
        android:progressTint="#02287E"
        android:layout_marginTop="55dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugerencia"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:textSize="18sp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribe_aqu_tu_recomendaci_n"
            android:layout_marginTop="25dp"
            android:inputType="textLongMessage"
            android:maxLength="200" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enviar"
        android:layout_marginTop="55dp"
        android:backgroundTint="#02287E"/>


</LinearLayout>